--- a/app/src/main/res/layout/activity_ver_pokemons.xml
+++ b/app/src/main/res/layout/activity_ver_pokemons.xml
@@ -45,14 +45,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_pokemons"
-        android:layout_width="match_parent"
-        android:layout_height="651dp"
+        android:layout_width="331dp"
+        android:layout_height="578dp"
+
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contenedor_titulo_ver_pokemons"
-        app:layout_constraintVertical_bias="0.131" />
+        app:layout_constraintTop_toBottomOf="@+id/contenedor_titulo_ver_pokemons" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
